Update host pair example notebook. Add notebook README.

--- a/examples/notebooks/Host Pairs - RiskIQ API.ipynb
+++ b/examples/notebooks/Host Pairs - RiskIQ API.ipynb
@@ -97,6 +97,18 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Table of Contents\n",
+    "\n",
+    "* [Hostpair Fundamentals](#Hostpair-Fundamentals): Understanding and querying the hostpairs dataset.\n",
+    "* [Filtering Hostpairs](#Filtering-Hostpair-Results): Leverage `analyzer` features to focus on foreign hosts.\n",
+    "* [Use Case: Find Inbound Redirects](#Use-Case:-Find-Inbound-Redirects): Discover sites redirecting traffic to your focus host.\n",
+    "* [Use Case: Find Site Copies](#Use-Case:-Find-Site-Copies): Discover copy-cat sites that have likely cloned the entire HTML of your focus host."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "---\n",
     "## Hostpair Fundamentals"
    ],
@@ -106,7 +118,7 @@
    "cell_type": "markdown",
    "source": [
     "### Hostpair Parents\n",
-    "Hostpair relationships are oriented around a specific hostname (defined here in the `focus_host` variable). Other hosts with a \"parent\" relationship to our focus hostname are \"upstream\" of our focus host. They may provide resources such as images or Javascript code to our foucs host, or they may redirect or link to our focus host. \n",
+    "Hostpair relationships are oriented around a specific hostname (defined here in the `focus_host` variable). Other hosts with a \"parent\" relationship to our focus hostname are \"upstream\" of our focus host. The \"upstream\" or \"parent\" hosts are publishing a web page that requests data or resources from, redirects to, or links to a child host.\n",
     "\n",
     "Here, we consider the hostpairs relationships that are \"upstream\" of our focus host, www.irs.gov."
    ],
@@ -470,7 +482,7 @@
    "source": [
     "---\n",
     "## Hostpair Use Cases\n",
-    "\n",
+    "---\n",
     "### Use Case: Find Inbound Redirects\n",
     "\n",
     "The hostpairs dataset can be used to find websites that are redirecting to our focus host. It is unusual (and often suspicious) when a website we do not control redirects to our site. For example, landing pages for credential harvesting and other phishing attacks will often redirect to the site they are copying if you simply visit the domain name directly without following a link, in a (often successful) attempt to lend legitimacy. "
@@ -744,7 +756,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Next, check the RiskIQ Illumiante reputation score for each domain:"
+    "Next, check the RiskIQ Illuminate reputation score for each domain:"
    ],
    "metadata": {}
   },
@@ -1270,7 +1282,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Use Case: Find site copies\n",
+    "---\n",
+    "### Use Case: Find Site Copies\n",
     "\n",
     "Many phishing and credential harvesting attacks use automated toolkits that copy the HTML code for a source site directly, with no human review and usually without downloading assets to the local webserver. When the copycat site is loaded, images and other resources will be fetched from the source site. These actions are detected by RiskIQ crawlers and indexed as a parent hostpair relationship between the original site and the copycat site.\n",
     "\n",
@@ -1735,16 +1748,12 @@
     }
    ],
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "48a94fd9c3faed58921e8eeafd6133f2080fb9f3fec1af84aa81ec152ca66bb0"
+  },
   "kernelspec": {
    "name": "python3",
    "display_name": "Python 3.8.2 64-bit"
@@ -1760,9 +1769,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
-  },
-  "interpreter": {
-   "hash": "48a94fd9c3faed58921e8eeafd6133f2080fb9f3fec1af84aa81ec152ca66bb0"
   }
  },
  "nbformat": 4,
