Fix notebook formatting that Github doesn't care for.

--- a/examples/notebooks/Projects and Monitors - RiskIQ API.ipynb
+++ b/examples/notebooks/Projects and Monitors - RiskIQ API.ipynb
@@ -735,9 +735,7 @@
    "id": "6789868c-75c1-437b-a5a4-55ed2f408cce",
    "metadata": {},
    "source": [
-    "---\n",
-    "> This example query finds a project with a specific GUID that you likely do not have access to. Replace the GUID with a GUID or a name of a project you have access to to avoid errors or empy artifact lists.\n",
-    "---"
+    "> This example query finds a project with a specific GUID that you likely do not have access to. Replace the GUID with a GUID or a name of a project you have access to to avoid errors or empy artifact lists."
    ]
   },
   {
@@ -772,10 +770,9 @@
    "id": "35b74269-a478-4086-a998-fed5cd9b78a5",
    "metadata": {},
    "source": [
-    "---\n",
     "> The `alerts_available` property makes a query to the API to retrieve one page of results, and returns the \"totalrecords\" field from that (likely abbreviated) recordlist. It is a convenient way to get the alert count but in some cases may not be optimal, especially if you're expecting results every day, in which case it is likely better to fetch the results directly.\n",
     "\n",
-    "---\n",
+    "\n",
     "To fetch the alerts, focuson a single artifact, either by iterating through the list of artifacts, or by filtering for a specific artifact. Then access the `alerts` property."
    ]
   },
@@ -894,9 +891,7 @@
    "id": "9406f270-eb14-40c5-abd3-567b12f498f3",
    "metadata": {},
    "source": [
-    "---\n",
-    "> This will likely raise an error if you run it without changing the project GUID, becasue you won't have access to that specific project from your account.\n",
-    "---"
+    "> This will likely raise an error if you run it without changing the project GUID, becasue you won't have access to that specific project from your account."
    ]
   },
   {
@@ -1165,9 +1160,7 @@
    "id": "cb7b65ec-64f7-48be-8b71-d98e11be52d3",
    "metadata": {},
    "source": [
-    "---\n",
-    "> We use the `filter` method of the `artifacts` list to find alerts with a `query` property set to `unverified`. This returns a list, but we are expecting only one match, so we use the `[0]` syntax to select the first item in the list.\n",
-    "---"
+    "> We use the `filter` method of the `artifacts` list to find alerts with a `query` property set to `unverified`. This returns a list, but we are expecting only one match, so we use the `[0]` syntax to select the first item in the list."
    ]
   },
   {
